# lightpad

./: .gitignore  CMakeLists.txt  README.md
cmake/: flags_unix.cmake  flags_win.cmake  macro.cmake  options.cmake
src/: CMakeLists.txt
src/core/: CMakeLists.txt  api.cpp  api.h  global.h  itextdocument.h  itextstream.h  piecetable.cpp  piecetable.h  rbtree.h  textbuffer.h  textdocument.cpp  textdocument.h  textstream.cpp  textstream.h
src/core_test/: CMakeLists.txt
tests/core/: CMakeLists.txt
tests/core/rbtree/: CMakeLists.txt  test_main.cpp
